# go/model_material.go
@@ -1,0 +1,33 @@
+/*
+ * ta-solve
+ *
+ * The unnamed Tin Arm solver API
+ *
+ * API version: 1.0
+ * Contact: api@tinarmengineering.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+// Material - Linear material model
+type Material struct {
+
+	Id *interface{} `json:"id,omitempty"`
+
+	Reference *interface{} `json:"reference,omitempty"`
+
+	HeatConductivity Quantity `json:"heat_conductivity"`
+
+	ElectricConductivity Quantity `json:"electric_conductivity"`
+
+	RelativePermeability *interface{} `json:"relative_permeability"`
+
+	RelativePermittivity *interface{} `json:"relative_permittivity"`
+
+	HeatCapacity Quantity `json:"heat_capacity"`
+
+	Density Quantity `json:"density"`
+
+	Name *interface{} `json:"name"`
+}
