# go/model_quantity.go
@@ -1,0 +1,18 @@
+/*
+ * ta-solve
+ *
+ * The unnamed Tin Arm solver API
+ *
+ * API version: 1.0
+ * Contact: api@tinarmengineering.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type Quantity struct {
+
+	Magnitude *interface{} `json:"magnitude"`
+
+	Quantity *interface{} `json:"quantity,omitempty"`
+}
