# go/model_stator_thermal_job.go
@@ -1,0 +1,17 @@
+/*
+ * ta-solve
+ *
+ * The unnamed Tin Arm solver API
+ *
+ * API version: 1.0
+ * Contact: api@tinarmengineering.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+// StatorThermalJob - A thermal simulation of a stator tooth
+type StatorThermalJob struct {
+
+	Geometry *interface{} `json:"geometry,omitempty"`
+}
